--- a/java/chatroom/pom.xml
+++ b/java/chatroom/pom.xml
@@ -58,6 +58,19 @@
 			<version>1.2.17</version>
 		</dependency>
 		<!-- slf4j end -->
+        <!-- commons start -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2</version>
+        </dependency>
+        <!-- commons end -->
+        
     </dependencies>
 
     <build>
